--- a/index.html
+++ b/index.html
@@ -10,16 +10,23 @@
 
 <body>
 
-    <div id="clock">
-        <div id="containerHours">
-            <div id="hours"></div>
+    <div id="contenues">
+
+        <div id="clock">
+            <div id="containerHours">
+                <div id="hours"></div>
+            </div>
+            <div id="containerMinutes">
+                <div id="minutes"></div>
+            </div>
+            <div id="containerSeconds">
+                <div id="seconds"></div>
+            </div>
+            <div id="containerClockCenter">
+                <div id="clockCenter"></div>
+            </div>
         </div>
-        <div id="containerMinutes">
-            <div id="minutes"></div>
-        </div>
-        <div id="containerSeconds">
-            <div id="seconds"></div>
-        </div>
+
     </div>
 
     <div id="date"></div>
