--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <div id="contenues">
+    <div id="container">
 
         <div id="clock">
             <div id="containerHours">
@@ -27,9 +27,10 @@
             </div>
         </div>
 
+        <div id="date"></div>
+
     </div>
 
-    <div id="date"></div>
 
     <script src="app.js"></script>
 
